# blevalueparser

./: .gitignore  CMakeLists.txt  Info.ios.plist  Info.macos.plist  LICENSE  README.md  change.txt
.github/workflows/: benchmarks.yml  ci.yml  cmake.yml  comment_on_pr.yml  coverage.yml  coverage_pr_comment.yml  examples.yml  tests.yml  tests_report.yml
benchmarks/: CMakeLists.txt  datagenerator.cpp  datagenerator.h  parserbenchmark.cpp  stringbenchmark.cpp
cmake/: Findfmt.cmake  Findgbenchmark.cmake  Findgtest.cmake  Findsimpleble.cmake
examples/: CMakeLists.txt
examples/gui/: CMakeLists.txt  blecharacteristicinfo.h  bledeviceinfo.h  blemanager.h  bleserviceinfo.cpp  bleserviceinfo.h  qml.qrc
examples/gui/qml/: ButtonsRow.qml  Characteristic.qml  CustomButton.qml  ListItemDescription.qml  ListItemLayout.qml  ListItemSeparator.qml  ListItemTitle.qml  PageBody.qml  Services.qml  StatusBar.qml  main.qml  qmldir
examples/gui/translations/: bvpqt_fi_FI.ts
examples/qt/: CMakeLists.txt  Info.plist  blecharacteristicinfo.cpp  blecharacteristicinfo.h  bledeviceinfo.cpp  bledeviceinfo.h  blemanager.cpp  blemanager.h  bleserviceinfo.cpp  bleserviceinfo.h  main.cpp
examples/qt/qml/: BodyListView.qml  Characteristic.qml  Characteristics.qml  CustomButton.qml  Devices.qml  HorizontalBusyIndicator.qml  ListItem.qml  ListItemInformation.qml  ListItemLayout.qml  ListItemSeparator.qml  ListItemSpacer.qml  PageHeader.qml  UISettings.qml  main.qml
examples/qt/translations/: bvpqt_en_US.ts
examples/tui/: CMakeLists.txt  blemanager.cpp  blemanager.h  demoapplication.cpp  demoapplication.h  main.cpp  utils.cpp  utils.hpp
include/: blevalueparser.h
include/blevalueparser/: alertcategoryid.h  alertcategoryidbitmask.h  alertnotificationcontrolpoint.h  basevalue.h  batterycriticalstatus.h  batteryenergystatus.h  batteryhealthinformation.h  batteryhealthstatus.h  batteryinformation.h  batterylevel.h  batterylevelstatus.h  batterytimestatus.h  blenames.h  bodycompositionfeature.h  bodycompositionmeasurement.h  bodycompositionmeasurementbase.h  bodycompositionmeasurementmibfs.h  bodysensorlocation.h  bvp.h  characteristictype.h  currenttime.h  datetime.h  dateutc.h  daydatetime.h  dayofweek.h  dstoffset.h  estimatedservicedate.h  exacttime256.h  heartratecontrolpoint.h  heartratemeasurement.h  hexstring.h  localtimeinformation.h  newalert.h  pnpid.h  referencetimeinformation.h  servicetype.h  supportedalertcategorybase.h  supportednewalertcategory.h  supportedunreadalertcategory.h  textstring.h  (+5 more)
tests/: CMakeLists.txt  alertcategoryidbitmasktest.cpp  alertcategoryidtest.cpp  alertnotificationcontrolpointtest.cpp  batterycriticalstatustest.cpp  batteryenergystatustest.cpp  batteryhealthinformationtest.cpp  batteryhealthstatustest.cpp  batteryinformationtest.cpp  batterylevelstatustest.cpp  batteryleveltest.cpp  batterytimestatustest.cpp  bodycompositionfeaturetest.cpp  bodycompositionmeasurementmibfstest.cpp  bodycompositionmeasurementtest.cpp  bodysensorlocationtest.cpp  currenttimetest.cpp  datetimetest.cpp  dateutctest.cpp  daydatetimetest.cpp  dayofweektest.cpp  dstoffsettest.cpp  estimatedservicedatetest.cpp  exacttime256test.cpp  heartratecontrolpointtest.cpp  heartratemeasurementtest.cpp  hexstringtest.cpp  internalparsertest.cpp  localtimeinformationtest.cpp  newalerttest.cpp  pnpidtest.cpp  referencetimeinformationtest.cpp  supportednewalertcategorytest.cpp  supportedunreadalertcategorytest.cpp  textstringtest.cpp  timeaccuracytest.cpp  timesourcetest.cpp  timezonetest.cpp  unreadalertstatustest.cpp  unsupportedtest.cpp  (+1 more)
